--- a/Buoi 2/style-menu-doc2.css
+++ b/Buoi 2/style-menu-doc2.css
@@ -1,7 +1,8 @@
 #menu  {
     font-family: "Times New Roman";
     font-size: 20px;
-    width:300px
+    width:300px;
+    position:fixed;
 }
 #menu > p {
     background: orange;
